makefile: install scip_handler.h

--- a/src/c/urg/Makefile.am
+++ b/src/c/urg/Makefile.am
@@ -3,6 +3,6 @@
 INCLUDES = ${C_INCLUDES}
 lib_LTLIBRARIES = libc_urg.la
 libc_urg_includedir = ${includedir}/c_urg
-libc_urg_include_HEADERS = urg_ctrl.h urg_t.h urg_parameter_t.h
+libc_urg_include_HEADERS = urg_ctrl.h urg_t.h urg_parameter_t.h scip_handler.h
 libc_urg_la_SOURCES = urg_ctrl.c scip_handler.c urg_errno.c \
-scip_handler.h urg_errno.h
+urg_errno.h
